<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Fraylon - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2017-2025 Andy Scherzinger <info@andy-scherzinger>
  ~ SPDX-FileCopyrightText: 2018-2020 Tobias Kaminsky <tobias@kaminsky.me>
  ~ SPDX-FileCopyrightText: 2020 Joris Bodin <joris.bodin@infomaniak.com>
  ~ SPDX-License-Identifier: AGPL-3.0-or-later OR GPL-2.0-only
-->
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_default">

    <FrameLayout
        android:id="@+id/toolbar_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways">

        <!-- sorting/layout bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sort_list_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/bg_default"
            android:paddingTop="@dimen/standard_eight_padding"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_button"
                style="@style/Fraylon.Material.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:contentDescription="@string/actionbar_sort"
                android:minWidth="0dp"
                android:text="@string/menu_item_sort_by_date_newest_first"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/fontAppbar"
                android:textSize="14sp"
                app:icon="@drawable/ic_expand_more"
                app:iconGravity="textEnd"
                app:iconSize="16dp"
                app:iconTint="@color/fontAppbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/switch_grid_view_button"
                style="@style/Widget.AppTheme.Button.IconButton"
                android:layout_width="@dimen/minimum_size_for_touchable_area"
                android:layout_height="@dimen/minimum_size_for_touchable_area"
                android:layout_marginEnd="1dp"
                android:contentDescription="@string/action_switch_grid_view"
                app:cornerRadius="@dimen/button_corner_radius"
                app:icon="@drawable/ic_view_module"
                app:iconTint="@color/fontAppbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- default toolbar -->
        <RelativeLayout
            android:id="@+id/default_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/preview_image_frame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_drawer_header_height"
                android:visibility="gone">

                <!--                TODO add shimmer -->

                <ImageView
                    android:id="@+id/preview_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nav_drawer_header_height"
                    android:contentDescription="@string/preview_image_description"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nav_drawer_header_height"
                    android:background="@drawable/preview_image_gradient_shape" />
            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/appbar"
                android:theme="@style/Theme.ToolbarTheme"
                tools:visibility="gone">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/toolbar_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:backgroundTint="@color/fontAppbar"
                    app:popupTheme="@style/Theme.AppCompat.DayNight.NoActionBar" />
            </com.google.android.material.appbar.MaterialToolbar>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/toolbar_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_half_margin"
            android:layout_marginBottom="@dimen/standard_quarter_margin"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toolbar_menu_button"
                style="@style/Widget.AppTheme.Button.IconButton"
                android:layout_width="@dimen/minimum_size_for_touchable_area"
                android:layout_height="@dimen/minimum_size_for_touchable_area"
                android:layout_marginStart="@dimen/standard_quarter_margin"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="@dimen/standard_half_margin"
                android:contentDescription="@string/drawer_open"
                app:cornerRadius="@dimen/button_corner_radius"
                app:icon="@drawable/ic_menu"
                app:iconSize="@dimen/search_bar_icon_size"
                app:iconTint="@color/fontAppbar" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/minimum_size_for_touchable_area"
                android:gravity="center"
                android:lines="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="Headline" />

        </LinearLayout>

        <!-- home/search toolbar -->
        <LinearLayout
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/standard_half_margin"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_button"
                style="@style/Widget.AppTheme.Button.IconButton"
                android:layout_width="@dimen/minimum_size_for_touchable_area"
                android:layout_height="@dimen/minimum_size_for_touchable_area"
                android:layout_marginStart="@dimen/standard_quarter_margin"
                android:layout_marginEnd="@dimen/standard_half_margin"
                android:contentDescription="@string/drawer_open"
                app:cornerRadius="@dimen/button_corner_radius"
                app:icon="@drawable/ic_menu"
                app:iconSize="@dimen/search_bar_icon_size"
                app:iconTint="@color/fontAppbar" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_search_container"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/standard_half_margin"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                app:background="@color/appbar"
                app:cardCornerRadius="25dp"
                app:cardElevation="2dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/search_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/standard_margin"
                        android:layout_marginEnd="@dimen/zero"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start|center_vertical"
                        android:lines="1"
                        android:textColor="@color/fontSecondaryAppbar"
                        android:textSize="16sp"
                        tools:text="@string/placeholder_search_in_nextcloud" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/notification_button"
                        style="@style/Widget.AppTheme.Button.IconButton"
                        android:layout_width="@dimen/minimum_size_for_touchable_area"
                        android:layout_height="@dimen/minimum_size_for_touchable_area"
                        android:layout_marginStart="@dimen/zero"
                        android:layout_marginEnd="@dimen/standard_quarter_margin"
                        android:contentDescription="@string/notification_icon_description"
                        app:cornerRadius="@dimen/button_corner_radius"
                        app:icon="@drawable/ic_notification"
                        app:iconSize="@dimen/search_bar_icon_size"
                        app:iconTint="@color/fontAppbar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/switch_account_button"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/switch_account_button"
                style="@style/Widget.AppTheme.Button.IconButton"
                android:layout_width="@dimen/minimum_size_for_touchable_area"
                android:layout_height="@dimen/minimum_size_for_touchable_area"
                android:layout_marginEnd="@dimen/standard_quarter_margin"
                app:cornerRadius="@dimen/button_corner_radius"
                app:iconSize="30dp"
                tools:icon="@drawable/ic_user_outline" />
        </LinearLayout>

    </FrameLayout>

    <include layout="@layout/info_box" />

</com.google.android.material.appbar.AppBarLayout>
