<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Fraylon - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2016-2025 Andy Scherzinger <info@andy-scherzinger.de>
  ~ SPDX-FileCopyrightText: 2018-2024 Tobias Kaminsky <tobias@kaminsky.me>
  ~ SPDX-FileCopyrightText: 2024 Alper Ozturk <alper.ozturk@nextcloud.com>
  ~ SPDX-FileCopyrightText: 2024 Bhavesh Kumawat <kumawatbhavesh1000@gmail.com>
  ~ SPDX-FileCopyrightText: 2017 Mario Danic <mario@lovelyhq.com>
  ~ SPDX-License-Identifier: AGPL-3.0-or-later OR GPL-2.0-only
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
      standard menu
      all items in this group MUST have orderInCategory="0" set
    -->
    <group
        android:id="@+id/drawer_menu_standard"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_all_files"
            android:icon="@drawable/selector_files"
            android:orderInCategory="0"
            android:title="@string/drawer_item_all_files" />
        <item
            android:id="@+id/nav_personal_files"
            android:icon="@drawable/selector_user"
            android:orderInCategory="0"
            android:title="@string/drawer_item_personal_files" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/selector_favorites"
            android:orderInCategory="0"
            android:title="@string/drawer_item_favorites" />
        <item
            android:id="@+id/nav_shared"
            android:orderInCategory="0"
            android:icon="@drawable/selector_share"
            android:title="@string/drawer_item_shared" />
        <item
            android:id="@+id/nav_recently_modified"
            android:icon="@drawable/selector_recently"
            android:orderInCategory="0"
            android:title="@string/drawer_item_recently_modified"
            android:visible="true"/>
        <item
            android:id="@+id/nav_groupfolders"
            android:orderInCategory="0"
            android:icon="@drawable/selector_teams"
            android:title="@string/drawer_item_groupfolders" />
    </group>
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/selector_activity"
            android:orderInCategory="1"
            android:title="@string/drawer_item_activities" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/selector_media"
            android:orderInCategory="1"
            android:title="@string/drawer_item_gallery" />
        <item
            android:id="@+id/nav_uploads"
            android:icon="@drawable/uploads"
            android:orderInCategory="1"
            android:title="@string/drawer_item_uploads_list"/>
        <item
            android:id="@+id/nav_on_device"
            android:icon="@drawable/selector_on_device"
            android:orderInCategory="1"
            android:title="@string/drawer_item_on_device"/>
        <item
            android:id="@+id/nav_assistant"
            android:icon="@drawable/selector_assistant"
            android:orderInCategory="1"
            android:title="@string/drawer_item_assistant" />
    </group>

    <!--
     all items in this group MUST have orderInCategory="3" set
   -->
    <group
        android:id="@+id/drawer_menu_external_links"
        android:checkableBehavior="single">
    </group>

    <!--
      all items in this group MUST have orderInCategory="4" set
    -->
    <group
        android:id="@+id/drawer_menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trashbin"
            android:icon="@drawable/selector_trashbin"
            android:orderInCategory="4"
            android:title="@string/drawer_item_trashbin"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/selector_settings"
            android:orderInCategory="4"
            android:title="@string/actionbar_settings"/>
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/nav_community"
            android:orderInCategory="4"
            android:title="@string/drawer_community" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:orderInCategory="4"
            android:title="@string/drawer_logout"/>
    </group>

    <!--
      dummy group/element as a workaround to see
      the whole menu in case of quota being displayed
    -->
    <group>
        <item
            android:enabled="false"
            android:orderInCategory="200"
            android:title=""/>
    </group>

    <!--
      one more dummy element required
      After making the quota details opaque
      it is hiding some part of the element of the drawer above it
    -->
    <group>
        <item
            android:enabled="false"
            android:orderInCategory="200"
            android:title=""/>
    </group>

</menu>
