<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Fraylon - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2018 Álvaro Brey <alvaro@alvarobrey.com>
  ~ SPDX-FileCopyrightText: 2018 Tobias Kaminsky <tobias@kaminsky.me>
  ~ SPDX-FileCopyrightText: 2016 Divay Prakash <divayprakash3@gmail.com>
  ~ SPDX-FileCopyrightText: 2015 María Asensio Valverde <masensio@solidgear.es>
  ~ SPDX-FileCopyrightText: 2015 Fraylon Inc.
  ~ SPDX-FileCopyrightText: 2013 David A. Velasco <dvelasco@solidgear.es>
  ~ SPDX-License-Identifier: GPL-2.0-only AND (AGPL-3.0-or-later OR GPL-2.0-only)
-->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragmentPager"
        android:orientation="horizontal"
		android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        layout="@layout/drawer"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>
